--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button onclick="compute()">Compute Interest</button>
         </div>
         <footer>
-            &#169; This Calculator belongs to --your name--
+            &#169; This Calculator belongs to BlackMeiCyan
         </footer>
     </body>
 </html>
