--- a/compound.html
+++ b/compound.html
@@ -14,10 +14,10 @@
             <select id="frequency" name="frequency">
               <option value="monthly">Monthly</option>
               <option value="annually">Annually</option>
-            </select>
+            </select>  <br/> 
             
             Annual Interest Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" oninput="updateRate()"> 
-            <span id="rate_val">10.25</span>% <br/>
+            <td><span id="rate_val">10.25</span></td>% <br/>
             <script>
               function updateRate() {
                 const rate = document.getElementById("rate").value;
