--- a/compound.html
+++ b/compound.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script.js"></script>
+        <script src="script1.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>compound Interest Calculator</title>
     </head>
