--- a/compound.html
+++ b/compound.html
@@ -3,18 +3,22 @@
     <head>
         <script src="script1.js"></script>
         <link rel="stylesheet" href="style.css">
-        <title>compound Interest Calculator</title>
+        <title>cCmpound Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
             <h1>Compound Interest Calculator</h1>
             Amount <input type="number"  id="principal">  <br/>
+            Regular Deposit <input type="number"  id="deposit">  <br/> 
+            <label for="frequency">Deposit Frequency </label>
+            <select id="frequency" name="frequency">
+              <option value="monthly">Monthly</option>
+              <option value="annually">Annually</option>
+            </select>  <br/>       
+
             Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25"> 
-            <span id="rate_val">
-                10.25
-            </span>% <br/>
-            No. of Years 
-            <input type="number" id="years" list="all_years">
+            <span id="rate_val"> 10.25 </span>% <br/>
+            No. of Years <input type="number" id="years" list="all_years">
             <datalist id="all_years">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -25,14 +29,16 @@
                 <option value="7">7</option>
                 <option value="8">8</option>
                 <option value="9">9</option>
-                <option value="10">10</option>
+                <option value="10">10</option>                
+                <option value="10">20</option>
+                <option value="10">30</option>
             </datalist>
             <br />
-            Interest : <span id="result"></span><br/>
             <button onclick="compute()">Compute Interest</button>
+            Result : <span id="result"></span><br/>
         </div>
         <footer>
-            &#169; This Calculator belongs to BlackMeiCyan
+            &#169; This Calculator belongs to Murphy
         </footer>
     </body>
 </html>
