--- a/compound.html
+++ b/compound.html
@@ -18,6 +18,17 @@
 
             Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25"> 
             <span id="rate_val"> 10.25 </span>% <br/>
+            <script>
+              function updateRate() {
+                const rate = document.getElementById("rate").value;
+                document.getElementById("rate_val").innerText = rate;
+              }
+            
+              // Optional: Initialize the span on page load
+              window.onload = function() {
+                updateRate();
+              };
+            </script>
             No. of Years <input type="number" id="years" list="all_years">
             <datalist id="all_years">
                 <option value="1">1</option>
@@ -33,9 +44,9 @@
                 <option value="10">20</option>
                 <option value="10">30</option>
             </datalist>
-            <br />
-            <button onclick="compute()">Compute Interest</button>
-            Result : <span id="result"></span><br/>
+            <br/>
+            <button onclick="compute()">Compute Interest</button><br/>
+            <br/>Result : <span id="result"></span><br/>
         </div>
         <footer>
             &#169; This Calculator belongs to Murphy
