--- a/compound.html
+++ b/compound.html
@@ -16,7 +16,7 @@
               <option value="annually">Annually</option>
             </select>  <br/>       
 
-            Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25"> 
+            Rate <td></td><input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" oninput="updateRate()"> 
             <span id="rate_val"> 10.25 </span>% <br/>
             <script>
               function updateRate() {
