--- a/compound.html
+++ b/compound.html
@@ -48,6 +48,12 @@
             <button onclick="compute()">Compute Interest</button><br/>
             <br/>Result : <span id="result"></span><br/>
         </div>
+        <div id="customAlert" style="display:none;" class="popup">
+          <h3>Murphy says:</h3>
+          <p id="alertMessage"></p>
+          <button onclick="hideCustomAlert()">OK</button>
+        </div>
+        
         <footer>
             &#169; This Calculator belongs to Murphy
         </footer>
