--- a/compound.html
+++ b/compound.html
@@ -3,7 +3,8 @@
     <head>
         <script src="script1.js"></script>
         <link rel="stylesheet" href="style.css">
-        <title>cCmpound Interest Calculator</title>
+        <link rel="icon" type="image/jpg" href="Rblogo.jpg">
+        <title>Cmpound Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
