--- a/compound.html
+++ b/compound.html
@@ -15,7 +15,7 @@
         </div>
         <div class="maindiv">
             <h1>Compound</h1><h2> Interest Calculator</h2> 
-            Amount <input type="number"  id="principal">  <br/>
+            Initial Amount <input type="number"  id="principal">  <br/>
             Regular Deposit <input type="number"  id="deposit">  <br/> 
             <label for="frequency">Deposit Frequency </label>
             <select id="frequency" name="frequency">
@@ -23,7 +23,7 @@
               <option value="annually">Annually</option>
             </select>  <br/>       
 
-            Rate <td></td><input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" oninput="updateRate()"> 
+            Interest Rate <td></td><input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" oninput="updateRate()"> 
             <span id="rate_val"> 10.25 </span>% <br/>
             <script>
               function updateRate() {
@@ -51,9 +51,9 @@
                 <option value="20">20</option>
                 <option value="30">30</option>
             </datalist>
-            <br/>
+            <br/>  <br/>
             <button onclick="compute()">Compute Interest</button><br/>
-            <br/>Result : <span id="result"></span><br/>
+            <br/>Result : <br/><span id="result"></span><br/>
         </div>
 
         
