--- a/compound.html
+++ b/compound.html
@@ -25,8 +25,7 @@
             </select>  <br/>       
 
             Interest Rate <span id="rate_val"> 5.25 </span>% <br/>
-           <input type="range" id="rate" min="1" max="20" value="5.25" step="0.25" oninput="updateRate()"> 
-            
+           <input type="range" id="rate" min="1" max="20" value="5.25" step="0.25" oninput="updateRate()"> <br/>            
             <script>
               function updateRate() {
                 const rate = document.getElementById("rate").value;
