--- a/compound.html
+++ b/compound.html
@@ -24,7 +24,7 @@
               <option value="annually">Annually</option>
             </select>  <br/>       
 
-            Interest Rate <span id="rate_val"> 5.25 </span>% <br/>
+            Interest Rate <span id="rate_val"> 5.25 </span>% 
            <input type="range" id="rate" min="1" max="12" value="5.25" step="0.25" oninput="updateRate()"> <br/>            
             <script>
               function updateRate() {
